:fire: Limpiando código.